Clean up inspections